Added material UI & Cosmetic changes

--- a/samooh/src/app/app.component.html
+++ b/samooh/src/app/app.component.html
@@ -1,25 +1,43 @@
 <!-- <h1>{{window.location.hash == '#init'? 'Initiator':'Attender'}}</h1> -->
 <!-- <button type="button" (click)="startVideo()">start video</button> -->
-<h1 *ngIf="username != ''">{{username}}</h1>
-<button type="button" (click)="_makePeer()">Connect to peer</button>
-<div class="row" [style.visibility]="(vidstart) ? 'visible' : 'hidden'">
-  <div class="column">
-    <video #userVid src=""></video>
-    <button type="button" (click)="muteVideo()">Mute/Unmute</button>
+<div class="name_container" *ngIf="!isSet">
+  <mat-grid-list cols="1" rowHeight="100px">
+    <mat-grid-tile>
+      <mat-form-field>
+        <mat-label>Set your name</mat-label>
+        <input matInput type="text" [(ngModel)]="username">
+      </mat-form-field>
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <button mat-raised-button (click)="setname()" color="primary">Set Name</button>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
+<div class="etc_container" *ngIf="isSet">
+  <h1 class="etc_heading" *ngIf="username != ''">{{username}}</h1>
+  <div id="peer_connect">
+    <button type="button" mat-raised-button (click)="_makePeer()">Connect to peer</button>
   </div>
-  <div class="column">
-    <video #peerVid src=""></video>
+  <div class="row" [style.visibility]="(vidstart) ? 'visible' : 'hidden'">
+    <div class="column">
+      <video #userVid src=""></video>
+      <button mat-raised-button class="user_btn" (click)="muteVideo()">Mute/Unmute</button>
+    </div>
+    <div class="column">
+      <video #peerVid src=""></video>
+      <button mat-raised-button class="user_btn" (click)="mutePeerVideo()">Mute/Unmute</button>
+    </div>
+  </div>
+  <br>
+  <br>
+  <input type="text" [(ngModel)]="userinput" placeholder="type message..." />
+  <button type="button" [disabled]="username == ''" (click)="send()">Send</button>
+  <br>
+  <br>
+  <p>Messages:</p>
+  <div *ngFor="let msg of msgs">
+    <b>{{msg.user}}</b> : {{msg.message}}
   </div>
 </div>
-<input type="text" [(ngModel)]="username" placeholder="type name..." />
-<button type="button" (click)="setname()">set name</button>
-<br>
-<br>
-<input type="text" [(ngModel)]="userinput" placeholder="type message..." />
-<button type="button" [disabled]="username == ''" (click)="send()">Send</button>
-<br>
-<br>
-<p>Messages:</p>
-<div *ngFor="let msg of msgs">
-  <b>{{msg.user}}</b> : {{msg.message}}
-</div>
+<!-- <input type="text" [(ngModel)]="username" placeholder="type name..." /> -->
+<!-- <button type="button" >set name</button> -->
