--- a/samooh/src/app/app.component.scss
+++ b/samooh/src/app/app.component.scss
@@ -14,3 +14,26 @@
     flex: 33.33%;
     padding: 5px;
 }
+
+.name_container {
+    padding: 200px;
+}
+
+.etc_container {
+    .etc_heading {
+        background: #3f51b5;
+        color: white;
+        box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+        text-transform: capitalize;
+        text-align: center;
+    }
+    .user_btn {
+        position: relative;
+        top: 0;
+        left: 0;
+        opacity: 0.5;
+    }
+    #peer_connect {
+        text-align: center;
+    }
+}
