--- a/samooh/src/app/app.component.html
+++ b/samooh/src/app/app.component.html
@@ -1,5 +1,3 @@
-<!-- <h1>{{window.location.hash == '#init'? 'Initiator':'Attender'}}</h1> -->
-<!-- <button type="button" (click)="startVideo()">start video</button> -->
 <div class="name_container" *ngIf="!isSet">
   <mat-grid-list cols="1" rowHeight="100px">
     <mat-grid-tile>
@@ -13,31 +11,46 @@
     </mat-grid-tile>
   </mat-grid-list>
 </div>
-<div class="etc_container" *ngIf="isSet">
-  <h1 class="etc_heading" *ngIf="username != ''">{{username}}</h1>
-  <div id="peer_connect">
-    <button type="button" mat-raised-button (click)="_makePeer()">Connect to peer</button>
-  </div>
-  <div class="row" [style.visibility]="(vidstart) ? 'visible' : 'hidden'">
-    <div class="column">
-      <video #userVid src=""></video>
-      <button mat-raised-button class="user_btn" (click)="muteVideo()">Mute/Unmute</button>
+<mat-sidenav-container *ngIf="isSet" class="tp_container">
+  <mat-sidenav mode = "side" opened>
+    <h1>Messages</h1>
+    <div *ngFor="let msg of msgs">
+      <b>{{msg.user}}</b> : {{msg.message}}
     </div>
-    <div class="column">
-      <video #peerVid src=""></video>
-      <button mat-raised-button class="user_btn" (click)="mutePeerVideo()">Mute/Unmute</button>
+    <div class="message_area">
+      <mat-form-field>
+        <textarea
+        matInput placeholder="label"
+        type="text"
+        [(ngModel)]="userinput"
+        (keypress)="checkEnter($event)"
+        placeholder="type message..."></textarea>
+        <!-- <mat-icon type="button" [disabled]="username == ''" mat-icon-button (click)="send()" style="float: right;">send</mat-icon> -->
+      </mat-form-field>
     </div>
-  </div>
-  <br>
-  <br>
-  <input type="text" [(ngModel)]="userinput" placeholder="type message..." />
-  <button type="button" [disabled]="username == ''" (click)="send()">Send</button>
-  <br>
-  <br>
-  <p>Messages:</p>
-  <div *ngFor="let msg of msgs">
-    <b>{{msg.user}}</b> : {{msg.message}}
-  </div>
-</div>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div class="etc_container">
+      <h1 class="etc_heading" *ngIf="username != ''">{{username}}</h1>
+      <div id="peer_connect">
+        <button type="button" mat-raised-button [disabled]="peerVideo" (click)="_makePeer()">Connect to peer</button>
+      </div>
+      <br>
+      <br>
+      <div class="row" [style.visibility]="(vidstart) ? 'visible' : 'hidden'" style="padding-top: 30px;">
+        <div class="column">
+          <video #userVid src=""></video>
+          <button mat-raised-button class="user_btn" (click)="muteVideo()">Mute/Unmute</button>
+        </div>
+        <div class="column" style="text-align: right;" [hidden]="!peerVideo">
+          <video #peerVid src=""></video>
+          <button mat-raised-button class="user_btn" (click)="mutePeerVideo()">Mute/Unmute</button>
+        </div>
+      </div>
+      <br>
+      <br>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
 <!-- <input type="text" [(ngModel)]="username" placeholder="type name..." /> -->
 <!-- <button type="button" >set name</button> -->
