--- a/samooh/src/app/app.component.scss
+++ b/samooh/src/app/app.component.scss
@@ -30,8 +30,10 @@
     }
     .user_btn {
         position: absolute;
-        top: 0;
-        left: 0;
+        left: 20px;
+    }
+    .pp {
+        left: 50px !important;
     }
     #peer_connect {
         text-align: center;
@@ -50,4 +52,11 @@
     position: absolute;
     bottom: 0;
     padding-left: 5px;
+}
+#msg_head {
+    background: #3f51b5;
+    color: white;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    text-transform: capitalize;
+    text-align: center;
 }
