--- a/samooh/src/app/app.component.scss
+++ b/samooh/src/app/app.component.scss
@@ -17,7 +17,7 @@
 }
 
 .name_container {
-    padding: 200px;
+    padding: 10%;
 }
 
 .etc_container {
@@ -38,15 +38,20 @@
     #peer_connect {
         text-align: center;
     }
+    .menu_cc {
+        position: absolute;
+        color: white;
+        margin: 5px;
+    }
 }
 .tp_container {
     height: 100%;
     mat-sidenav {
         width: 200px;
     }
-    mat-sidenav-content {
-        margin-left: 200px;
-    }
+    // mat-sidenav-content {
+    //     margin-left: 200px;
+    // }
 }
 .message_area {
     position: absolute;
@@ -59,4 +64,18 @@
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     text-transform: capitalize;
     text-align: center;
+}
+.msg_container {
+    overflow-y: auto;
+    height: 80%;
+}
+
+@media only screen and (max-device-width: 768px) {
+    .row {
+        flex-direction: column;
+    }
+    video {
+        height: 100%;
+        width: 100%;
+    }
 }
